{
    "name": "PlayerControls",
    "maps": [
        {
            "name": "TouchControls",
            "id": "f613a4dd-f1b7-4f2b-9f7a-7e9d06b99845",
            "actions": [
                {
                    "name": "TouchPress",
                    "type": "Button",
                    "id": "985d05fe-bb00-49fc-98ba-f502eb194ea6",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Hold"
                },
                {
                    "name": "TouchPosition",
                    "type": "PassThrough",
                    "id": "0431315d-0ccc-4f3d-8c78-a0457827643e",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "301433f1-8ce0-459c-99c7-390455231a44",
                    "path": "<Touchscreen>/primaryTouch/press",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TouchPress",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "d131a6c3-33bb-4b3f-82c7-a1a7112ad7f2",
                    "path": "<Touchscreen>/primaryTouch/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TouchPosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}